--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #909396;
+  background-color: #f8f8f8;
 }
 
 .home-main {
@@ -7,12 +7,12 @@ body {
   margin-top: 20px;
 }
 .home-main .container {
-  width: 60%;
+  width: 85%;
   border-radius: 20px;
   margin: auto;
   padding: 40px;
-  border: 20px solid #181D31;
-  background-color: rgba(255, 255, 255, 0.575);
+  border: 20px solid #6f76fc;
+  background-color: #f8f8f8;
 }
 .home-main .main-header {
   width: 100%;
@@ -20,7 +20,7 @@ body {
 }
 .home-main .main-intro {
   width: 100%;
-  border: 1px solid rgb(85, 84, 84);
+  border: 1px solid #6f76fc;
   border-radius: 30px;
   text-align: center;
 }
@@ -32,11 +32,11 @@ body {
   margin-top: 40px;
   display: flex;
   justify-content: space-around;
-  border: 5px solid #181D31;
+  border: 5px solid #6f76fc;
   border-radius: 20px;
 }
 .home-main .main-projects .projects-user .projects-left {
-  border-right: 1px solid #181D31;
+  border-right: 1px solid #6f76fc;
   width: 20%;
   height: auto;
   position: relative;
@@ -49,22 +49,39 @@ body {
   height: 80px;
   transform: translate(-50%, -50%);
   text-align: center;
-  border: 1px solid #181D31;
+  border: 1px solid #6f76fc;
   border-radius: 50%;
   padding: 15px;
 }
 .home-main .main-projects .projects-user .projects-right {
   width: 80%;
-  padding-left: 40px;
+  padding-left: 20px;
 }
 .home-main .main-projects .projects-user .projects-right .right-body {
   width: 100%;
   display: flex;
 }
 .home-main .main-projects .projects-user .projects-right .right-body .right-body-list {
-  padding-right: 10px;
+  padding: 0 10px;
+}
+.home-main .main-projects .projects-user .projects-right .right-body .right-body-list .btnA {
+  font-size: 1.1em;
+  padding: 10px;
+  margin-top: 15px;
+  border: 1px solid #6f76fc;
+  border-radius: 10px;
+  background-color: white;
+  transition: 0.3s ease-in-out;
+}
+.home-main .main-projects .projects-user .projects-right .right-body .right-body-list .btnA:hover {
+  background-color: #6f76fc;
+  color: white;
 }
 .home-main .main-projects .projects-user .projects-right .right-body .right-body-list a {
   text-decoration: none;
   color: black;
+  transition: 0.3s ease-in-out;
+}
+.home-main .main-projects .projects-user .projects-right .right-body .right-body-list a:hover {
+  font-size: 1.1em;
 }/*# sourceMappingURL=style.css.map */
